welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:10: error: Invalid literal number
      for (i<-0t o 6) {
              ^ZigZag:10: error: illegal start of simple expression
      for (i<-0t o 6) {
              ^ZigZag:13: error: ')' expected but '}' found.
    } else if (col==0) {
    ^